# open-coscientist

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
dev/: .env.example  README.md  evaluate_cache.py  logging_utils.py  run_generate_lit_tools_isolation.py  run_generate_standalone.py  run_lit_review_standalone.py  run_supervisor_standalone.py  state_helpers.py
docs/: architecture.md  configuration.md  development.md  generation-modes.md  literature_review_tools_configuration.md  logging.md  mcp-integration.md
examples/: run.py
mcp_server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  literature_review.py  models.py  pyproject.toml  server.py  text_extraction.py  utils.py
mcp_server/tools/lit_review/: pubmed_search_with_fulltext.py  search_pubmed.py
src/open_coscientist/: __init__.py  cache.py  console.py  constants.py  generator.py  llm.py  mcp_client.py  models.py  prompts.py  schemas.py  state.py
src/open_coscientist/config/: __init__.py  registry.py  schema.py  tools.yaml
src/open_coscientist/nodes/: evolve.py  generate.py  literature_review.py  literature_review_helpers.py  meta_review.py  proximity.py  ranking.py  reflection.py  review.py  supervisor.py
src/open_coscientist/prompts/: evolution.md  generation.md  generation_after_debate.md  generation_debate_and_literature.md  generation_draft_with_tools.md  generation_with_literature_review.md  hypothesis_novelty_analysis.md  hypothesis_validation_synthesis.md  meta_review.md  review.md  (+6 more)
(+20 files in other folders)
